<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:icon="@drawable/ic_launcher"
        android:title="@string/font_size">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:checked="true"
                    android:id="@+id/font_size_10"
                    android:title="@string/font_size_10"/>
                <item
                    android:id="@+id/font_size_12"
                    android:title="@string/font_size_12"/>
                <item
                    android:id="@+id/font_size_14"
                    android:title="@string/font_size_14"/>
                <item
                    android:id="@+id/font_size_16"
                    android:title="@string/font_size_16"/>
            </group>
        </menu>
    </item>

    <item
        android:icon="@drawable/ic_launcher"
        android:title="@string/font_color">
        <menu>
            <group>
                <item
                    android:id="@+id/color_red"
                    android:title="@string/color_red"/>
                <item
                    android:id="@+id/color_green"
                    android:title="@string/color_green"/>
                <item
                    android:id="@+id/color_blue"
                    android:title="@string/color_blue"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/plain_item"
        android:title="@string/plain_item">
    </item>

</menu>